Integrating claude code. The project has enough design patterns that AI tools have become helpful in boostrapping and refinign code.

--- a/.gitignore
+++ b/.gitignore
@@ -36,6 +36,10 @@ playground.xcworkspace
 
 .build/
 
+.claude/
+
+*.core
+
 # CocoaPods
 #
 # We recommend against adding the Pods directory to your .gitignore. However
